added compatibility.manifest, adjusted readme

--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,39 @@ xcuserdata
 *.suo
 ipch/
  
+#openframeworks generated solution files
+*.solution
+*.VC.VC.opendb
+*.VC.db
+*.vcxproj.users
+
+*_i.c
+*_p.c
+*_i.h
+*.ilk
+*.meta
+*.obj
+*.pch
+*.pdb
+*.pgc
+*.pgd
+*.rsp
+*.sbr
+*.tlb
+*.tli
+*.tlh
+*.tmp
+*.tmp_proj
+*.log
+*.vspscc
+*.vssscc
+.builds
+*.pidb
+*.svclog
+*.scc
+*.iobj
+*.ipdb
+
 #Eclipse
 .metadata
 local.properties
