--- a/example_ofxCEF/example_ofxCEF.vcxproj
+++ b/example_ofxCEF/example_ofxCEF.vcxproj
@@ -134,10 +134,13 @@ if errorlevel 1 exit 0 else exit %errorlevel%</Command>
       <Command>echo on
         dir
         robocopy "$(ProjectDir)../../../addons/ofxCef/libs/CEF/win64/$(Configuration)/" "$(ProjectDir)bin/" "*.dll" "*.bin" /njs /njh /np /fp /bytes
-        robocopy "$(ProjectDir)../../../addons/ofxCef/libs/CEF/win64/Resources/" "$(ProjectDir)bin/" "*.pak" /njs /njh /np /fp /bytes
+        robocopy "$(ProjectDir)../../../addons/ofxCef/libs/CEF/win64/Resources/" "$(ProjectDir)bin/" "*.pak" /E /njs /njh /np /fp /bytes
         robocopy "$(OF_ROOT)/export/vs/$(Platform_Actual)/" "$(ProjectDir)bin/" "*.dll" /njs /njh /np /fp /bytes
 if errorlevel 1 exit 0 else exit %errorlevel%</Command>
     </PostBuildEvent>
+    <Manifest>
+      <AdditionalManifestFiles>compatibility.manifest</AdditionalManifestFiles>
+    </Manifest>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <ClCompile>
